# config/routes.ts
@@ -6,7 +6,7 @@ export default [
   },
   { path: '/dashboard', name: '仪表盘', icon: 'dashboard', component: './Dashboard' },
   { name: '短址管理', icon: 'UnorderedListOutlined', path: '/shortens', component: './Shortener' },
-  { name: '查看日志', icon: 'UnorderedListOutlined', path: '/histories', component: './History' },
+  { name: '日志管理', icon: 'UnorderedListOutlined', path: '/histories', component: './History' },
   { path: '/', redirect: '/dashboard' },
   { path: '*', layout: false, component: './404' },
 ];
