# src/access.ts
@@ -1,9 +1,0 @@
-/**
- * @see https://umijs.org/docs/max/access#access
- * */
-export default function access(initialState: { currentUser?: API2.UserInfo } | undefined) {
-  const { currentUser } = initialState ?? {};
-  return {
-    canAdmin: currentUser && currentUser.level === 1,
-  };
-}
